Used toList() directly instead of collect(Collector.toList())